# Arrand-arabic-random-text

./: .buildinfo  .gitignore  CREDITS  MANIFEST.in  Makefile  PKG-INFO  README.md  README.rst  epydoc.conf  features.html  genindex.html  index.html  objects.inv  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.py  tox.ini
.github/: ci.yml
_sources/: index.md.txt
arrand/: __init__.py  __main__.py  arrandom.py  builder.py  nonsense_const.py  pyproject.toml  rand_const.py  randombuild.py
arrand/data/: ayas.txt  hadiths.txt  phrases.txt  poems.txt  proverbs.txt  texts.txt  words.txt
arrand/data/vocalized/: ayas.txt  hadiths.txt  poems.txt  texts.txt  words.txt
docs/: conf.py  features.md  requirements.txt
tests/: example.py  example2.py  test_unit_arromdom.py
